@@ -115,12 +115,13 @@ if (lc(config('server', 'ircd')) eq 'inspircd') {
 } else {
     error("chakora", "This protocol isn't supported by Chakora.");
 };
+require API::Main;
+require API::Server;
 
 # Void support if ALLOW_TAINT is enabled
 if (config('services', 'allow_taint')) {
 	print("[WARNING] ALLOW_TAINT is enabled, your rights to support are hereby voided.\n");
 }
-
 
 # Create database operator
 if (!-d "$ROOT_ETC/data") {
@@ -385,57 +386,6 @@ sub svsflog {
     close FILE; 
 }
 
-sub svsilog {
-	my ($service, $user, $cmd, $args) = @_;
-	if (length($args) == 0) {
-		serv_privmsg($service, config('log', 'logchan'), uidInfo($user, 1).": \002".uc($cmd)."\002");
-	}
-	else {
-		serv_privmsg($service, config('log', 'logchan'), uidInfo($user, 1).": \002".uc($cmd)."\002: ".$args);
-	}
-}
-
-sub logchan {
-	my ($service, $text) = @_;
-	serv_privmsg($service, config('log', 'logchan'), $text);
-}
-
-sub module_init {
-    my ($name, $author, $version, $init_handler, $void_handler, $ircd) = @_;
-    print("[MODULES] Attempting to load module: ".$name." v".$version." by ".$author."\n");
-    svsflog("chakora", "[MODULES] Attempting to load module: ".$name." v".$version." by ".$author);
-    $ircd = lc($ircd);
-    if ($ircd ne 'all' and $ircd ne lc(config('server', 'ircd'))) {
-        print("[MODULES] Module ".$name." refusing to load: Protocol not supported.\n");
-        svsflog("chakora", "[MODULES] Module ".$name." refusing to load: Protocol not supported.");
-        return "MODLOAD_BADPROTO";
-    } else {
-        eval
-        {
-            &{ $init_handler }();
-            print("[MODULES] ".$name.": Module successfully loaded.\n");
-            svsflog("chakora", "[MODULES] ".$name.": Module successfully loaded.");
-            $MODULE{$name}{name} = $name;
-            $MODULE{$name}{author} = $author;
-            $MODULE{$name}{version} = $version;
-            $MODULE{$name}{void} = $void_handler;
-            return "MODLOAD_SUCCESS";
-            1;	
-        } or print("[MODULES] ".$name.": Module failed to load. $@\n") and svsflog("chakora", "[MODULES] ".$name.": Module failed to load.") and return "MODLOAD_FAIL";
-    }
-}
-
-sub module_exists {
-	my ($module) = @_;
-	my $exists = 0;
-	foreach my $mod (keys %MODULE) {
-		if ($mod eq $module) {
-			$exists = 1;
-		}
-	}
-	return $exists;
-}
-
 sub module_load {
 	my ($module) = @_;
 	if (-e $ROOT_SRC."/../modules/".lc($module).".pm") {
@@ -449,44 +399,6 @@ sub module_load {
 	else {
 		return 0;
 	}
-}
-
-sub module_void {
-	my ($module) = @_;
-	svsflog("chakora", "[MODULES] ".$module.": Attempting to unload module. . .");
-	if (defined($MODULE{$module})) {
-		my $void_handler = $MODULE{$module}{void};
-		eval
-        {
-            &{ $void_handler }();
-            delete_sub $void_handler;
-            print("[MODULES] ".$module.": Module successfully unloaded.\n");
-            svsflog("chakora", "[MODULES] ".$module.": Module successfully unloaded.");
-			delete $MODULE{$module};
-            return "MODUNLOAD_SUCCESS";
-			1;	
-        } or print("[MODULES] ".$module.": Module failed to unload.\n") and svsflog("chakora", "[MODULES] ".$module.": Module failed to unload.") and return "MODUNLOAD_FAIL";
-	} else {
-		print("[MODULES] ".$module.": Module failed to unload. No such module?\n");
-		svsflog("chakora", "[MODULES] ".$module.": Module failed to unload. No such module?");
-		return "MODUNLOAD_NOEXIST";
-	}	
-}
-
-sub cmd_add {
-    my ($name, $shelp, $fhelp, $handler) = @_;
-    my @rname = split('/', $name);
-    $COMMANDS{$rname[0]}{$rname[1]}{name} = $name;
-    $COMMANDS{$rname[0]}{$rname[1]}{handler} = $handler;
-    $HELP{$name}{shelp} = $shelp;
-    $HELP{$name}{fhelp} = $fhelp;
-}
-
-sub cmd_del {
-	my ($cmd) = @_;
-	my @scmd = split('/', $cmd);
-	undef $COMMANDS{$scmd[0]}{$scmd[1]};
-	undef $HELP{$cmd};
 }
 
 sub count {
@@ -520,73 +432,6 @@ sub handle_ctcp {
 sub ctcp_reply {
 	my ($svsuid, $user, $ctcp, $reply) = @_;
 	send_sock(":".$svsuid." NOTICE ".$user." :\001".$ctcp." ".$reply."\001");
-}
-
-sub parse_mode {
-	my ($modes, $key, $mode) = @_;
-	if ($key eq '+') {
-		my @kmodes = split('\+', $modes);
-		my (@mmodes);
-		foreach my $lmodes (@kmodes) {
-			my @nmodes = split('-', $lmodes);
-			if (defined $nmodes[0]) {
-				push(@mmodes, $nmodes[0]);
-			} else {
-				push(@mmodes, $lmodes);
-			}
-		}
-		my $ei = 0;
-		foreach my $omodes (@mmodes) {
-			if ($omodes =~ m/($mode)/) {
-				$ei = 1;
-			}
-		}
-		return $ei;
-	}
-	elsif ($key eq '-') {
-		my @kmodes = split('-', $modes);
-		my (@mmodes);
-		foreach my $lmodes (@kmodes) {
-			my @nmodes = split('\+', $lmodes);
-			if (defined $nmodes[0]) {
-				push(@mmodes, $nmodes[0]);
-			} else {
-				push(@mmodes, $lmodes);
-			}
-		}
-		my $ei = 0;
-		foreach my $omodes (@mmodes) {
-			if ($omodes =~ m/($mode)/) {
-				$ei = 1;
-			}
-		}
-		return $ei;
-	}
-}
-
-sub is_soper {
-	my ($uid) = @_;
-	if (uidInfo($uid, 7)) {
-		return 1;
-	}
-	else {
-		return 0;
-	}
-}
-
-sub is_registered {
-	my ($nick) = @_;
-	my $check = $SVSDB->prepare("SELECT * from nicks WHERE nick='$nick'") or print "Cannot prepare: ".$SVSDB->errstr;
-        $check->execute() or print "Cannot execute ".$check->errstr();
-        print $check->rows();
-	if ($check->rows != 0) 
-	{
-		return 1;
-	}
-	else 
-	{
-		return 0;
-	}
 }
 
 sub TERM_handler {
