@@ -63,3 +63,4 @@ Current
 	- Protocols - InspIRCd: check for m_chghost
 	- Modules: Fixed a bug in hostserv/main where, it wouldn't create HostServ if we're already synced.
 	- API: Added serv_del() for deleting services clients.
+	- API: Made Chakora more modular by moving API stuff to separate modules located in src/API.
